--- a/src/styles/navbar.module.scss
+++ b/src/styles/navbar.module.scss
@@ -6,6 +6,9 @@
     font-family: 'Mochiy Pop One', sans-serif;
     width: 100%;
     height: $headerHeight;
+    position: fixed;
+    top: 0;
+    z-index: 1;
     
     @include breakpoint(ms) {
         width: 90%;
