--- a/src/styles/productItem.module.css
+++ b/src/styles/productItem.module.css
@@ -7,7 +7,7 @@ width: 80%;
 justify-content: space-evenly;
 padding: 10px;
 box-shadow: 2px 2px 4px rgba(0,0,0);
-background-color:#108888;
+background-color:#10888860;
 align-items: center;
 font-family: 'Cardo', serif;
 
