--- a/src/styles/shoppingcart.module.css
+++ b/src/styles/shoppingcart.module.css
@@ -1,6 +1,6 @@
 .cartShopping{
     max-width: 80%;
-    background-color: #108888;
+    background-color: #10888860;
     padding: 20px;
     text-align: center;
     font-family: 'cardo';
